# binance-cpp-client

./: .clang-format  .clang-tidy  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  endpoint_request.yml  performance.yml
.github/workflows/: ci.yml
cmake/: BinanceCppClientConfig.cmake.in
docs/: api_coverage.md
examples/: futures_market_snapshot.cpp  market_snapshot.cpp  options_market_snapshot.cpp  place_test_order.cpp  ws_stream_url.cpp
include/binance/: binance.hpp  futures_client.hpp  http_client.hpp  options_client.hpp  query.hpp  rest_client.hpp  signing.hpp  types.hpp  websocket_client.hpp
src/: futures_account.cpp  futures_client.cpp  futures_market.cpp  futures_trading.cpp  http_client.cpp  http_error.cpp  options_account.cpp  options_client.cpp  options_market.cpp  options_trading.cpp  query.cpp  rest_account.cpp  rest_client.cpp  rest_market.cpp  rest_trading.cpp  signing.cpp  websocket_client.cpp
tests/: test_derivatives_surface.cpp  test_order_request.cpp  test_query.cpp  test_rest_surface.cpp  test_signing.cpp  test_websocket_topics.cpp
